--- a/src/app/component/cardlist/cardlist.component.html
+++ b/src/app/component/cardlist/cardlist.component.html
@@ -2,7 +2,7 @@
   <h2 class="font-title font-bold text-3xl md:text-4xl text-gray-900 mb-6 lg:text-left lg:ml-30 my-30">
     Pourquoi Choisir WorkSphere?
   </h2>
-  <div class="flex justify-center items-center space-y-6 lg:space-x-6 lg:space-y-0 flex-col lg:flex-row max-w-screen-2xl mx-auto ">
+  <div class="flex justify-center items-center space-y-6 lg:space-x-6 lg:space-y-0 flex-col lg:flex-row max-w-screen-2xl mx-auto my-10 ">
     <app-card *ngFor="let card of cardData" [imageUrl]="card.imageUrl" [title]="card.title" [description]="card.description"></app-card>
   </div>
 </section>
