--- a/src/app/component/text-card-list/text-card-list.component.html
+++ b/src/app/component/text-card-list/text-card-list.component.html
@@ -1,6 +1,6 @@
-<div class="flex justify-center items-center min-h-screen bg-gray-100 my-20">
-  <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-y-10 gap-x-4 p-6 w-full lg:content-center mx-4 rounded-lg">
-    <div class="flex flex-col space-y-10 border border-gray-200 rounded-lg mx-auto">
+<div class="flex justify-center items-center min-h-screen bg-gray-100 w-full mx-auto">
+  <section class="grid grid-cols-1 lg:grid-cols-3 gap-y-10 gap-x-4 p-6 w-full lg:content-center mx-4 rounded-lg">
+    <div class="flex flex-col align-center  space-y-10 border border-gray-200 rounded-lg mx-auto">
       <h2 class="font-family font-bold text-2xl p-2 text-gray-900">Outils essentiels</h2>
       <p class="text-gray-500">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born..But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born....</p>
     </div>
